favicon, email sending, some templating, etc.

--- a/package.json
+++ b/package.json
@@ -5,10 +5,17 @@
     "dev": "next",
     "build": "next build",
     "start": "next start",
-    "migrate": "node scripts/migrate-db.js"
+    "migrate": "node scripts/migrate-db.js",
+    "type-check": "tsc --pretty --noEmit",
+    "format": "prettier --write .",
+    "lint": "eslint . --ext ts --ext tsx --ext js",
+    "test": "jest",
+    "test-all": "yarn lint && yarn type-check && yarn test"
   },
   "dependencies": {
+    "@babel/preset-env": "^7.13.10",
     "@prisma/client": "^2.18.0",
+    "aws-sdk": "^2.863.0",
     "axios": "^0.21.1",
     "bad-words": "^3.0.4",
     "clsx": "^1.1.1",
@@ -19,15 +26,20 @@
     "react-loading-skeleton": "^2.1.1",
     "serverless-mysql": "^1.5.4",
     "swr": "^0.3.9",
+    "uuid": "^8.3.2",
     "validator": "^13.5.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.13.10",
+    "@babel/plugin-transform-runtime": "^7.13.10",
+    "@types/jest": "^26.0.20",
     "@types/node": "^14.14.6",
     "@types/react": "^16.9.55",
     "@typescript-eslint/eslint-plugin": "^4.17.0",
     "@typescript-eslint/parser": "^4.17.0",
     "eslint": "^7.21.0",
     "eslint-config-prettier": "^8.1.0",
+    "jest": "^26.6.3",
     "postcss-flexbugs-fixes": "4.2.1",
     "postcss-preset-env": "^6.7.0",
     "prettier": "^2.2.1",
