--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -12,4 +12,4 @@ jobs:
         run: |
           curl --request POST \
           --url '${{ secrets.API_ORIGIN }}/api/fees' \
-          --header 'Authorization: Bearer ${{ secrets.FEES_API_KEY}}'
+          --header 'Authorization: ${{ secrets.FEES_API_KEY}}'
