--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -9,7 +9,10 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Call our API route
+        env:
+          API_ORIGIN: ${{ secrets.API_ORIGIN }}
+          FEES_API_KEY: ${{ secrets.FEES_API_KEY}}
         run: |
           curl --request POST \
-          --url '${{ secrets.API_ORIGIN }}/api/fees' \
-          --header 'Authorization: ${{ secrets.FEES_API_KEY}}'
+          --url "$API_ORIGIN/api/fees" \
+          --header "Authorization: $FEES_API_KEY"
