--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,14 +1,15 @@
-name: 12-hour-cron
+name: 6-hour-cron
 on:
   schedule:
-    - cron: "* */12 * * *"
+    - cron: "0 */6 * * *"
   workflow_dispatch:
 
 jobs:
   cron:
     runs-on: ubuntu-latest
     steps:
-      - name: Call our API route
+      - name: Call /api/fees to trigger check
+        shell: bash
         env:
           API_ORIGIN: ${{ secrets.API_ORIGIN }}
           FEES_API_KEY: ${{ secrets.FEES_API_KEY}}
