--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -14,6 +14,6 @@ jobs:
           API_ORIGIN: ${{ secrets.API_ORIGIN }}
           FEES_API_KEY: ${{ secrets.FEES_API_KEY}}
         run: |
-          curl --request POST \
+          curl --request GET \
           --url "$API_ORIGIN/api/fees" \
           --header "Authorization: $FEES_API_KEY"
