--- a/.github/workflows/cron.yaml
+++ b/.github/workflows/cron.yaml
@@ -1,7 +1,7 @@
-name: 6-hour-cron
+name: Check mempool state
 on:
   schedule:
-    - cron: "0 */6 * * *"
+    - cron: "0 */3 * * *"
   workflow_dispatch:
 
 jobs:
